# TUM_AdvancedCourseCPP

./: LICENSE  README.md  startplayersim.sh  updateBuildExecute.sh
Documents/: MidtermPresentation.pptx  Orientation.pptx
Projekt/: CMakeLists.txt  Doxyfile.in  mainwindow.cpp  mainwindow.h  robotThread.cpp  robotThread.h
Projekt/AI/: game.cpp  game.h  gameengine.cpp  gameengine.h  pathplanning.cpp  pathplanning.h
Projekt/Actor/: actorLowLevel.cpp  actorLowLevel.h  actorhighlevel.cpp  actorhighlevel.h  pathRealizer.h  spline.cpp  spline.h
Projekt/Data/: define.h  mapdata.cpp  mapdata.h  obstacle.cpp  obstacle.h
Projekt/GUI/: cvimagewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  qcustomplot.h
Projekt/Logging/: LogParams.h  log.cpp  log.h
Projekt/Main/: main.cpp  player.cpp  player.h  robotThread.cpp  robotThread.h
Projekt/Plots/: cvimagewidget.h  pathplotdata.h  pidplotdata.h
Projekt/Sensor/: cam.cpp  cam.h  cameraparams.h  medianfilter.cpp  medianfilter.h  medianfilter_new.cpp  medianfilter_new.h  orientierung.cpp  orientierung.h  sensor.h  sensorLowLevel.cpp  sensorLowLevel.h  sensorhighlevel.cpp  sensorhighlevel.h  trilateration.cpp  trilateration.h
Projekt/Structs/: cameraparams.h  constrainedlaserdata.cpp  constrainedlaserdata.h  filterparams.h  laserplotdata.h  logparams.h  pathplotdata.h  pidparams.h  pidplotdata.h  position.cpp  position.h
Projekt/release/: CMakeCache.txt  Hockey  Makefile  cmake_install.cmake  moc_actorhighlevel.cpp  moc_cam.cpp  moc_cvimagewidget.cpp  moc_game.cpp  moc_gameengine.cpp  moc_mainwindow.cpp  moc_pathplanning.cpp  moc_qcustomplot.cpp  moc_robotThread.cpp  ui_mainwindow.h
angelina/angelina/: CMakeLists.txt
angelina/angelina/.svn/: wc.db
angelina/angelina/angelina/: angelinaapplication.h  colortask.cpp  editplaygrounddialog.h  icons.qrc  main.cpp  mainwindow.cpp  pillar.cpp  pillar.h  playground.h  qsingleton.h  ratiotask.cpp  resultframe.h  server.cpp  server.h  task.h  timeoutclock.cpp  timeoutclock.h
angelina/angelina/example/: main.cpp  testgui.h
angelina/angelina/hermes/: CMakeLists.txt  hermescodes.h  referee.h
playerconfig/: ldv_pioneer_2014.cfg  ldv_pioneer_on_stage.cfg  pioneer.inc  sick.inc  simple.world
playerconfig/hockey/: hockey.world  hockeyMAPphotoshop.psd  ldv_pioneer_on_stage_hockey.cfg  ldv_pioneer_on_stage_hockey.cfg~  ldv_pioneer_on_stage_hockey_nogui.cfg  map.inc
playerconfig/playerconfig_hockey_offical/: hockey.world  ldv_pioneer_hockey_on_stage.cfg  sick.inc  sick.inc~
